[package]
name = "runtime-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
# wit-bindgen = "0.18.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }
bytemuck = "1.14.3"
glam = "0.25.0"
wasm-bindgen = "0.2.93"

[lib]
crate-type = ["cdylib"]
